# ebers

./: .env  .gitignore  BEFORE_AFTER.md  COMPONENT_EXAMPLES.md  Cargo.toml  DATABASE.md  DATABASE_INTEGRATION.md  DESIGN_GUIDE.md  PALANTIR_REDESIGN_SUMMARY.md  QUICK_REFERENCE.md  REFACTORING_SUMMARY.md  mock_api_server.py  readme.md  sim.py  styles.css
shared-types/: Cargo.toml
shared-types/src/: lib.rs
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  commands.rs  db.rs  db_init.rs  db_operations.rs  db_orm.rs  detection_client.rs  lib.rs  lib.rs.test_insert.txt  main.rs  migrations.rs  models.rs  serial_handler.rs
src-tauri/src/entities/: mod.rs  patient.rs  setting.rs  test.rs
src/app/: serial.rs
src/app/components/: data_flow.rs  device_card.rs  mod.rs  platform_grid.rs  profile_menu.rs  stats_card.rs
src/app/pages/: detections.rs  landing.rs  mod.rs  patient_form.rs  predictions.rs  results.rs  scientific_view.rs  settings.rs  test_reading.rs  test_results.rs  test_start.rs
